# aspeak

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOP.md  LICENSE  Makefile  PKGBUILD  PKGBUILD-bin  README.MD  README.md  README.md.in  aspeak.pyi  console.js  merge-wheel.bash  pylintrc  requirements.txt  setup.cfg  update-README.bash
.github/workflows/: pypi.yml  release.yml
examples/: 01-synthesize-txt-files.rs  02-rssl.rs  03-rest-synthesizer-simple.rs  04-websocket-synthesizer-simple.rs
examples/sample-files/: ipsum.txt  lorem.txt
src/: GBK  audio.rs  auth.rs  cli.rs  constants.rs  error.rs  errors.rs  lib.rs  main.rs  msg.rs  net.rs  parse.rs  python.rs  ssml.rs  synthesizer.rs  types.rs  utils.rs  voice.rs  websocket_synthesizer.rs
src/aspeak/: __init__.py  __main__.py  auth.py  errors.py  formats.py  quality.py  ssml.py  synthesizer.py  token.py  urls.py  version.py  voices.py
src/aspeak/api/: __init__.py  api.py  format.py  functional.py  provider.py
src/aspeak/cli/: constants.py  main.py  parser.py  range.py  result_handler.py  utils.py  validation.py  value_parsers.py  voices.py
src/cli/: args.rs  aspeak.toml  commands.rs  config.rs  parse.rs
src/examples/: async.py  file.py  line_by_line.py  simple.py
src/synthesizer/: rest.rs  unified.rs  websocket.rs
