[package]
name = "aspeak"
version = "4.0.0-alpha.4"
edition = "2021"
authors = ["kxxt <rsworktech@outlook.com>"]
description = "A simple text-to-speech client based on Azure's speech synthesis API"
homepage = "https://github.com/kxxt/aspeak"
repository = "https://github.com/kxxt/aspeak"
keywords = ["speech-synthesis", "aspeak", "tts", "text-to-speech"]
license = "MIT"

[lib]
name = "aspeak"
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3"]

[profile.release]
lto = true
strip = true

[dependencies]
chrono = { version = "0.4.23", features = ["std", "clock"] }
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.14", default_features = false, features = ["json", "rustls-tls-native-roots"] }
rodio = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
xml-rs = "0.8.4"
pyo3 = { version = "0.18.0", features = ["extension-module"], optional = true }
color-eyre = "0.6.2"
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
tokio = { version = "1.25.0", features = ["rt", "macros"] }
futures-util = "0.3.26"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.32"
