[package]
name = "aspeak"
version = "5.1.0"
edition = "2021"
authors = ["kxxt <rsworktech@outlook.com>"]
description = "A simple text-to-speech client for Azure TTS API."
homepage = "https://github.com/kxxt/aspeak"
repository = "https://github.com/kxxt/aspeak"
keywords = ["speech-synthesis", "aspeak", "tts", "text-to-speech"]
license = "MIT"

[lib]
name = "aspeak"
crate-type = ["cdylib", "rlib"]

[features]
audio = ["dep:rodio"]
python = ["audio", "dep:pyo3", "dep:env_logger", "dep:color-eyre"]
binary = [
    "audio",
    "dep:clap",
    "dep:env_logger",
    "dep:toml",
    "dep:dirs",
    "dep:color-eyre",
    "dep:serde_json",
    "dep:open",
    "dep:encoding_rs",
    "dep:encoding_rs_io",
]

[[bin]]
name = "aspeak"
required-features = ["binary"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]


[dependencies]
chrono = { version = "0.4.23", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.1.4", features = ["derive"], optional = true }
colored = "2.0.0"
env_logger = { version = "0.10.0", optional = true }
log = { version = "0.4.17", features = ["release_max_level_info"] }
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.14", default-features = false, features = [
    "json",
    "native-tls",
    "socks",
] }
rodio = { version = "0.17.1", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", optional = true }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
xml-rs = "0.8.4"
pyo3 = { version = "0.18.0", features = ["extension-module"], optional = true }
color-eyre = { version = "0.6.2", optional = true }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1.25.0", default-features = false }
futures-util = { version = "0.3.26", default-features = false }
encoding_rs_io = { version = "0.1.7", optional = true }
encoding_rs = { version = "0.8.32", optional = true }
toml = { version = "0.7.1", default-features = false, features = [
    "parse",
], optional = true }
dirs = { version = "5.0.0", optional = true }
open = { version = "4.0.1", optional = true }
url = "2.3.1"
hyper = "0.14.25"
tokio-socks = "0.5.1"
