[package]
name = "aspeak"
version = "6.0.0-alpha.3"
edition = "2021"
authors = ["kxxt <rsworktech@outlook.com>"]
description = "A simple text-to-speech client for Azure TTS API."
homepage = "https://github.com/kxxt/aspeak"
repository = "https://github.com/kxxt/aspeak"
keywords = ["speech-synthesis", "aspeak", "tts", "text-to-speech"]
license = "MIT"

[lib]
name = "aspeak"
crate-type = ["cdylib", "rlib"]

[features]
audio = ["dep:rodio"]
python = ["audio", "dep:pyo3", "dep:env_logger", "dep:color-eyre", "synthesizers"]
rest-synthesizer = []
websocket-synthesizer = ["dep:tokio-tungstenite", "dep:tokio", "dep:futures-util", "dep:tokio-socks", "dep:chrono", "dep:uuid"]
unified-synthesizer = ["dep:async-trait"]
synthesizers = ["unified-synthesizer", "rest-synthesizer", "websocket-synthesizer"]
default = ["default-tls", "synthesizers"]
binary = ["audio", "synthesizers", "dep:tokio", "dep:clap", "dep:env_logger", "dep:toml", "dep:dirs", "dep:color-eyre", "dep:serde_json", "dep:open", "dep:encoding_rs", "dep:encoding_rs_io"]
default-tls = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite?/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "tokio-tungstenite?/native-tls-vendored"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots", "tokio-tungstenite?/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots", "tokio-tungstenite?/rustls-tls-webpki-roots"]

[[bin]]
name = "aspeak"
required-features = ["binary"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]


[dependencies]
chrono = { version = "0.4.23", default-features = false, features = [
    "std",
    "clock",
], optional = true }
clap = { version = "4.1.4", features = ["derive"], optional = true }
colored = "2.0.0"
env_logger = { version = "0.10.0", optional = true }
log = { version = "0.4.17", features = ["release_max_level_info"] }
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.14", default-features = false, features = [
    "json",
    "socks",
] }
rodio = { version = "0.17.1", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.3.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
], optional = true }
xml-rs = "0.8.4"
pyo3 = { version = "0.19.0", features = ["extension-module"], optional = true }
color-eyre = { version = "0.6.2", optional = true }
tokio-tungstenite = { version = "0.19.0", optional = true, default-features = false }
tokio = { version = "1.25.0", features = ["rt", "macros"], optional = true }
futures-util = { version = "0.3.26", default-features = false, optional = true }
encoding_rs_io = { version = "0.1.7", optional = true }
encoding_rs = { version = "0.8.32", optional = true }
toml = { version = "0.7.1", default-features = false, features = [
    "parse",
], optional = true }
dirs = { version = "5.0.0", optional = true }
open = { version = "4.0.1", optional = true }
url = "2.3.1"
hyper = { version = "0.14.25" }
tokio-socks = { version = "0.5.1", optional = true }
anyhow = "1.0.70"
async-trait = { version = "0.1.68", optional = true }

[dev-dependencies]
futures = "0.3.28"
tokio = { version = "1.25.0", features = ["rt", "macros", "fs"] }
