[metadata]
name = aspeak
version = 0.1
author = Levi Zim
author_email = rsworktech@outlook.com
description = A simple text-to-speech client using azure TTS API(trial).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kxxt/aspeak
project_urls =
    Bug Tracker = https://github.com/kxxt/aspeak/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Speech

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src